--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "fastify": "^5.7.1",
     "fastify-type-provider-zod": "^6.1.0",
     "zod": "^4.3.6"
