✨ Feat: Add routes, pages and styles

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -20,6 +20,14 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+
+    // importação de caminho de arquivos
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
   },
   "include": ["src"]
 }
