--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/server.js",
     "start:dev": "tsx watch src/server.ts",
     "start:build": "node build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
